@@ -1,5 +1,5 @@
 /*
-Copyright (c) 2021, MapTiler.com & OpenMapTiles contributors.
+Copyright (c) 2024, MapTiler.com & OpenMapTiles contributors.
 All rights reserved.
 
 Code license: BSD 3-Clause License
@@ -42,6 +42,7 @@ import static org.openmaptiles.util.Utils.nullOrEmpty;
 
 import com.carrotsearch.hppc.LongIntMap;
 import com.onthegomap.planetiler.FeatureCollector;
+import com.onthegomap.planetiler.ForwardingProfile;
 import com.onthegomap.planetiler.VectorTile;
 import com.onthegomap.planetiler.collection.Hppc;
 import com.onthegomap.planetiler.config.PlanetilerConfig;
@@ -88,7 +89,8 @@ public class Place implements
   Tables.OsmIslandPoint.Handler,
   Tables.OsmIslandPolygon.Handler,
   Tables.OsmCityPoint.Handler,
-  OpenMapTilesProfile.FeaturePostProcessor {
+  Tables.OsmBoundaryPolygon.Handler,
+  ForwardingProfile.LayerPostProcessor {
 
   /*
    * Place labels locations and names come from OpenStreetMap, but we also join with natural
@@ -96,8 +98,10 @@ public class Place implements
    * and minimum zoom level to use for those points.
    */
 
-  private static final TreeMap<Double, Integer> ISLAND_AREA_RANKS = new TreeMap<>(Map.of(
-    Double.MAX_VALUE, 3,
+  private static final TreeMap<Double, Integer> AREA_RANKS = new TreeMap<>(Map.of(
+    Double.MAX_VALUE, 1,
+    squareMetersToWorldArea(640_000_000), 2,
+    squareMetersToWorldArea(160_000_000), 3,
     squareMetersToWorldArea(40_000_000), 4,
     squareMetersToWorldArea(15_000_000), 5,
     squareMetersToWorldArea(1_000_000), 6
@@ -235,7 +239,7 @@ public class Place implements
         rank = country.rank;
       }
 
-      rank = Math.max(1, Math.min(6, rank));
+      rank = Math.clamp(rank, 1, 6);
 
       features.point(LAYER_NAME).setBufferPixels(BUFFER_SIZE)
         .putAttrs(names)
@@ -261,12 +265,14 @@ public class Place implements
         if (nullOrEmpty(names.get(Fields.NAME_EN))) {
           names.put(Fields.NAME_EN, state.name);
         }
-        int rank = Math.min(6, Math.max(1, state.rank));
+        int rank = Math.clamp(state.rank, 1, 6);
 
         features.point(LAYER_NAME).setBufferPixels(BUFFER_SIZE)
           .putAttrs(names)
           .setAttr(Fields.CLASS, element.place())
           .setAttr(Fields.RANK, rank)
+          // TODO: This starts including every "state" point at z2, even before many countries show up.
+          //       Instead we might want to set state min zooms based on rank from natural earth?
           .setMinZoom(2)
           .setSortKey(rank);
       }
@@ -280,7 +286,7 @@ public class Place implements
   public void process(Tables.OsmIslandPolygon element, FeatureCollector features) {
     try {
       double area = element.source().area();
-      int rank = ISLAND_AREA_RANKS.ceilingEntry(area).getValue();
+      int rank = AREA_RANKS.ceilingEntry(area).getValue();
       int minzoom = rank <= 3 ? 8 : rank <= 4 ? 9 : 10;
 
       features.pointOnSurface(LAYER_NAME).setBufferPixels(BUFFER_SIZE)
@@ -368,14 +374,31 @@ public class Place implements
   }
 
   @Override
+  public void process(Tables.OsmBoundaryPolygon element, FeatureCollector features) {
+    try {
+      int rank = AREA_RANKS.ceilingEntry(element.source().area()).getValue();
+      int minzoom = rank <= 4 ? rank + 5 : 10;
+
+      features.pointOnSurface(LAYER_NAME).setBufferPixels(BUFFER_SIZE)
+        .putAttrs(OmtLanguageUtils.getNames(element.source().tags(), translations))
+        .setAttr(OpenMapTilesSchema.Boundary.Fields.CLASS, element.boundary())
+        .setAttr(Fields.RANK, rank)
+        .setMinZoom(minzoom);
+    } catch (GeometryException e) {
+      e.log(stats, "omt_boundary_poly",
+        "Unable to get point for OSM boundary polygon " + element.source().id());
+    }
+  }
+
+  @Override
   public List<VectorTile.Feature> postProcess(int zoom, List<VectorTile.Feature> items) {
     // infer the rank field from ordering of the place labels with each label grid square
     LongIntMap groupCounts = Hppc.newLongIntHashMap();
     for (VectorTile.Feature feature : items) {
       int gridrank = groupCounts.getOrDefault(feature.group(), 1);
       groupCounts.put(feature.group(), gridrank + 1);
-      if (!feature.attrs().containsKey(Fields.RANK)) {
-        feature.attrs().put(Fields.RANK, 10 + gridrank);
+      if (!feature.tags().containsKey(Fields.RANK)) {
+        feature.tags().put(Fields.RANK, 10 + gridrank);
       }
     }
     return items;
